content/_generated-doc/2.16/config/quarkus-mailer.adoc

:summaryTableId: quarkus-mailer
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference.searchable, cols="80,.^10,.^10"]
|===

h|[[quarkus-mailer_configuration]]link:#quarkus-mailer_configuration[Configuration property]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-mailer_quarkus.mailer.cache-attachments]]`link:#quarkus-mailer_quarkus.mailer.cache-attachments[quarkus.mailer.cache-attachments]`

[.description]
--
Caches data from attachment's Stream to a temporary file. It tries to delete it after sending email.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MAILER_CACHE_ATTACHMENTS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MAILER_CACHE_ATTACHMENTS+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-mailer_quarkus.mailer.from]]`link:#quarkus-mailer_quarkus.mailer.from[quarkus.mailer.from]`

[.description]
--
Sets the default `from` attribute when not specified in the `io.quarkus.mailer.Mail` instance. It's the sender email address.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MAILER_FROM+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MAILER_FROM+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-mailer_quarkus.mailer.mock]]`link:#quarkus-mailer_quarkus.mailer.mock[quarkus.mailer.mock]`

[.description]
--
Enables the mock mode. When enabled, mails are not sent, but stored in an in-memory mailbox. The content of the emails is also printed on the console. 
Disabled by default on PROD, enabled by default on DEV and TEST modes.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MAILER_MOCK+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MAILER_MOCK+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|


a| [[quarkus-mailer_quarkus.mailer.bounce-address]]`link:#quarkus-mailer_quarkus.mailer.bounce-address[quarkus.mailer.bounce-address]`

[.description]
--
Sets the default bounce email address. A bounced email, or bounce, is an email message that gets rejected by a mail server.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MAILER_BOUNCE_ADDRESS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MAILER_BOUNCE_ADDRESS+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-mailer_quarkus.mailer.host]]`link:#quarkus-mailer_quarkus.mailer.host[quarkus.mailer.host]`

[.description]
--
Sets the SMTP host name.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MAILER_HOST+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MAILER_HOST+++`
endif::add-copy-button-to-env-var[]
--|string 
|`localhost`


a| [[quarkus-mailer_quarkus.mailer.port]]`link:#quarkus-mailer_quarkus.mailer.port[quarkus.mailer.port]`

[.description]
--
The SMTP port. The default value depends on the configuration. The port 25 is used as default when `ssl` is disabled. This port continues to be used primarily for SMTP relaying. SMTP relaying is the transmission of email from email server to email server. The port 587 is the default port when `ssl` is enabled. It ensures that email is submitted securely. Note that the port 465 may be used by SMTP servers, however, IANA has reassigned a new service to this port, and it should no longer be used for SMTP communications.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MAILER_PORT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MAILER_PORT+++`
endif::add-copy-button-to-env-var[]
--|int 
|


a| [[quarkus-mailer_quarkus.mailer.username]]`link:#quarkus-mailer_quarkus.mailer.username[quarkus.mailer.username]`

[.description]
--
Sets the username to connect to the SMTP server.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MAILER_USERNAME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MAILER_USERNAME+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-mailer_quarkus.mailer.password]]`link:#quarkus-mailer_quarkus.mailer.password[quarkus.mailer.password]`

[.description]
--
Sets the password to connect to the SMTP server.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MAILER_PASSWORD+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MAILER_PASSWORD+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-mailer_quarkus.mailer.ssl]]`link:#quarkus-mailer_quarkus.mailer.ssl[quarkus.mailer.ssl]`

[.description]
--
Enables or disables the TLS/SSL.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MAILER_SSL+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MAILER_SSL+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-mailer_quarkus.mailer.trust-all]]`link:#quarkus-mailer_quarkus.mailer.trust-all[quarkus.mailer.trust-all]`

[.description]
--
Set whether all server certificates should be trusted. This option is only used when `ssl` is enabled.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MAILER_TRUST_ALL+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MAILER_TRUST_ALL+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|


a| [[quarkus-mailer_quarkus.mailer.max-pool-size]]`link:#quarkus-mailer_quarkus.mailer.max-pool-size[quarkus.mailer.max-pool-size]`

[.description]
--
Sets the max number of open connections to the mail server.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MAILER_MAX_POOL_SIZE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MAILER_MAX_POOL_SIZE+++`
endif::add-copy-button-to-env-var[]
--|int 
|`10`


a| [[quarkus-mailer_quarkus.mailer.own-host-name]]`link:#quarkus-mailer_quarkus.mailer.own-host-name[quarkus.mailer.own-host-name]`

[.description]
--
Sets the hostname to be used for HELO/EHLO and the Message-ID.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MAILER_OWN_HOST_NAME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MAILER_OWN_HOST_NAME+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-mailer_quarkus.mailer.keep-alive]]`link:#quarkus-mailer_quarkus.mailer.keep-alive[quarkus.mailer.keep-alive]`

[.description]
--
Sets if connection pool is enabled. If the connection pooling is disabled, the max number of sockets is enforced nevertheless.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MAILER_KEEP_ALIVE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MAILER_KEEP_ALIVE+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`


a| [[quarkus-mailer_quarkus.mailer.disable-esmtp]]`link:#quarkus-mailer_quarkus.mailer.disable-esmtp[quarkus.mailer.disable-esmtp]`

[.description]
--
Disable ESMTP. The RFC-1869 states that clients should always attempt `EHLO` as first command to determine if ESMTP is supported, if this returns an error code, `HELO` is tried to use the _regular_ SMTP command.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MAILER_DISABLE_ESMTP+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MAILER_DISABLE_ESMTP+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-mailer_quarkus.mailer.start-tls]]`link:#quarkus-mailer_quarkus.mailer.start-tls[quarkus.mailer.start-tls]`

[.description]
--
Sets the TLS security mode for the connection. Either `DISABLED`, `OPTIONAL` or `REQUIRED`.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MAILER_START_TLS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MAILER_START_TLS+++`
endif::add-copy-button-to-env-var[]
--|string 
|`OPTIONAL`


a| [[quarkus-mailer_quarkus.mailer.dkim.enabled]]`link:#quarkus-mailer_quarkus.mailer.dkim.enabled[quarkus.mailer.dkim.enabled]`

[.description]
--
Enables DKIM signing.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MAILER_DKIM_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MAILER_DKIM_ENABLED+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-mailer_quarkus.mailer.dkim.private-key]]`link:#quarkus-mailer_quarkus.mailer.dkim.private-key[quarkus.mailer.dkim.private-key]`

[.description]
--
Configures the PKCS++#++8 format private key used to sign the email.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MAILER_DKIM_PRIVATE_KEY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MAILER_DKIM_PRIVATE_KEY+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-mailer_quarkus.mailer.dkim.private-key-path]]`link:#quarkus-mailer_quarkus.mailer.dkim.private-key-path[quarkus.mailer.dkim.private-key-path]`

[.description]
--
Configures the PKCS++#++8 format private key file path.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MAILER_DKIM_PRIVATE_KEY_PATH+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MAILER_DKIM_PRIVATE_KEY_PATH+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-mailer_quarkus.mailer.dkim.auid]]`link:#quarkus-mailer_quarkus.mailer.dkim.auid[quarkus.mailer.dkim.auid]`

[.description]
--
Configures the Agent or User Identifier (AUID).

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MAILER_DKIM_AUID+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MAILER_DKIM_AUID+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-mailer_quarkus.mailer.dkim.selector]]`link:#quarkus-mailer_quarkus.mailer.dkim.selector[quarkus.mailer.dkim.selector]`

[.description]
--
Configures the selector used to query the public key.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MAILER_DKIM_SELECTOR+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MAILER_DKIM_SELECTOR+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-mailer_quarkus.mailer.dkim.sdid]]`link:#quarkus-mailer_quarkus.mailer.dkim.sdid[quarkus.mailer.dkim.sdid]`

[.description]
--
Configures the Signing Domain Identifier (SDID).

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MAILER_DKIM_SDID+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MAILER_DKIM_SDID+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-mailer_quarkus.mailer.dkim.header-canon-algo]]`link:#quarkus-mailer_quarkus.mailer.dkim.header-canon-algo[quarkus.mailer.dkim.header-canon-algo]`

[.description]
--
Configures the canonicalization algorithm for signed headers.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MAILER_DKIM_HEADER_CANON_ALGO+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MAILER_DKIM_HEADER_CANON_ALGO+++`
endif::add-copy-button-to-env-var[]
-- a|
`simple`, `relaxed` 
|


a| [[quarkus-mailer_quarkus.mailer.dkim.body-canon-algo]]`link:#quarkus-mailer_quarkus.mailer.dkim.body-canon-algo[quarkus.mailer.dkim.body-canon-algo]`

[.description]
--
Configures the canonicalization algorithm for mail body.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MAILER_DKIM_BODY_CANON_ALGO+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MAILER_DKIM_BODY_CANON_ALGO+++`
endif::add-copy-button-to-env-var[]
-- a|
`simple`, `relaxed` 
|


a| [[quarkus-mailer_quarkus.mailer.dkim.body-limit]]`link:#quarkus-mailer_quarkus.mailer.dkim.body-limit[quarkus.mailer.dkim.body-limit]`

[.description]
--
Configures the body limit to sign. Must be greater than zero.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MAILER_DKIM_BODY_LIMIT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MAILER_DKIM_BODY_LIMIT+++`
endif::add-copy-button-to-env-var[]
--|int 
|


a| [[quarkus-mailer_quarkus.mailer.dkim.signature-timestamp]]`link:#quarkus-mailer_quarkus.mailer.dkim.signature-timestamp[quarkus.mailer.dkim.signature-timestamp]`

[.description]
--
Configures to enable or disable signature sign timestamp.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MAILER_DKIM_SIGNATURE_TIMESTAMP+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MAILER_DKIM_SIGNATURE_TIMESTAMP+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|


a| [[quarkus-mailer_quarkus.mailer.dkim.expire-time]]`link:#quarkus-mailer_quarkus.mailer.dkim.expire-time[quarkus.mailer.dkim.expire-time]`

[.description]
--
Configures the expire time in seconds when the signature sign will be expired. Must be greater than zero.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MAILER_DKIM_EXPIRE_TIME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MAILER_DKIM_EXPIRE_TIME+++`
endif::add-copy-button-to-env-var[]
--|long 
|


a| [[quarkus-mailer_quarkus.mailer.dkim.signed-headers]]`link:#quarkus-mailer_quarkus.mailer.dkim.signed-headers[quarkus.mailer.dkim.signed-headers]`

[.description]
--
Configures the signed headers in DKIM, separated by commas. The order in the list matters.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MAILER_DKIM_SIGNED_HEADERS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MAILER_DKIM_SIGNED_HEADERS+++`
endif::add-copy-button-to-env-var[]
--|list of string 
|


a| [[quarkus-mailer_quarkus.mailer.login]]`link:#quarkus-mailer_quarkus.mailer.login[quarkus.mailer.login]`

[.description]
--
Sets the login mode for the connection. Either `NONE`, @++{++code DISABLED++}++, `OPTIONAL`, `REQUIRED` or `XOAUTH2`.  
 - DISABLED means no login will be attempted 
 - NONE means a login will be attempted if the server supports in and login credentials are set 
 - REQUIRED means that a login will be attempted if the server supports it and the send operation will fail otherwise 
 - XOAUTH2 means that a login will be attempted using Google Gmail Oauth2 tokens

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MAILER_LOGIN+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MAILER_LOGIN+++`
endif::add-copy-button-to-env-var[]
--|string 
|`NONE`


a| [[quarkus-mailer_quarkus.mailer.auth-methods]]`link:#quarkus-mailer_quarkus.mailer.auth-methods[quarkus.mailer.auth-methods]`

[.description]
--
Sets the allowed authentication methods. These methods will be used only if the server supports them. If not set, all supported methods may be used. The list is given as a space separated list, such as `DIGEST-MD5 CRAM-SHA256 CRAM-SHA1 CRAM-MD5 PLAIN LOGIN`.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MAILER_AUTH_METHODS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MAILER_AUTH_METHODS+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-mailer_quarkus.mailer.truststore.password]]`link:#quarkus-mailer_quarkus.mailer.truststore.password[quarkus.mailer.truststore.password]`

[.description]
--
Sets the trust store password if any. Note that the password is only used for JKS and PCK++#++12 trust stores.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MAILER_TRUSTSTORE_PASSWORD+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MAILER_TRUSTSTORE_PASSWORD+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-mailer_quarkus.mailer.truststore.paths]]`link:#quarkus-mailer_quarkus.mailer.truststore.paths[quarkus.mailer.truststore.paths]`

[.description]
--
Sets the location of the trust store files. If you use JKS or PCK++#++12, only one path is allowed. If you use PEM files, you can specify multiple paths. 
The relative paths are relative to the application working directly.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MAILER_TRUSTSTORE_PATHS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MAILER_TRUSTSTORE_PATHS+++`
endif::add-copy-button-to-env-var[]
--|list of string 
|


a| [[quarkus-mailer_quarkus.mailer.truststore.type]]`link:#quarkus-mailer_quarkus.mailer.truststore.type[quarkus.mailer.truststore.type]`

[.description]
--
Sets the trust store type. By default, it guesses the type from the file name extension. For instance, `truststore.pem` will be seen as a PEM file, while `truststore.jks` will be seen as a JKS file. `truststore.p12` and `truststore.pfx` will both be seen as PKCS++#++12 files. Accepted values are: `JKS`, `PEM`, `PKCS`.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MAILER_TRUSTSTORE_TYPE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MAILER_TRUSTSTORE_TYPE+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-mailer_quarkus.mailer.multi-part-only]]`link:#quarkus-mailer_quarkus.mailer.multi-part-only[quarkus.mailer.multi-part-only]`

[.description]
--
Whether the mail should always been sent as multipart even if they don't have attachments. When sets to true, the mail message will be encoded as multipart even for simple mails without attachments.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MAILER_MULTI_PART_ONLY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MAILER_MULTI_PART_ONLY+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-mailer_quarkus.mailer.allow-rcpt-errors]]`link:#quarkus-mailer_quarkus.mailer.allow-rcpt-errors[quarkus.mailer.allow-rcpt-errors]`

[.description]
--
Sets if sending allows recipients errors. If set to true, the mail will be sent to the recipients that the server accepted, if any.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MAILER_ALLOW_RCPT_ERRORS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MAILER_ALLOW_RCPT_ERRORS+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-mailer_quarkus.mailer.pipelining]]`link:#quarkus-mailer_quarkus.mailer.pipelining[quarkus.mailer.pipelining]`

[.description]
--
Enables or disables the pipelining capability if the SMTP server supports it.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MAILER_PIPELINING+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MAILER_PIPELINING+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`


a| [[quarkus-mailer_quarkus.mailer.pool-cleaner-period]]`link:#quarkus-mailer_quarkus.mailer.pool-cleaner-period[quarkus.mailer.pool-cleaner-period]`

[.description]
--
Sets the connection pool cleaner period. Zero disables expiration checks and connections will remain in the pool until they are closed.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MAILER_POOL_CLEANER_PERIOD+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MAILER_POOL_CLEANER_PERIOD+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[], title=More information about the Duration format]
|`PT1S`


a| [[quarkus-mailer_quarkus.mailer.keep-alive-timeout]]`link:#quarkus-mailer_quarkus.mailer.keep-alive-timeout[quarkus.mailer.keep-alive-timeout]`

[.description]
--
Set the keep alive timeout for the SMTP connection. This value determines how long a connection remains unused in the pool before being evicted and closed. A timeout of 0 means there is no timeout.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MAILER_KEEP_ALIVE_TIMEOUT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MAILER_KEEP_ALIVE_TIMEOUT+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[], title=More information about the Duration format]
|`PT300S`


a| [[quarkus-mailer_quarkus.mailer.ntlm.workstation]]`link:#quarkus-mailer_quarkus.mailer.ntlm.workstation[quarkus.mailer.ntlm.workstation]`

[.description]
--
Sets the workstation used on NTLM authentication.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MAILER_NTLM_WORKSTATION+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MAILER_NTLM_WORKSTATION+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-mailer_quarkus.mailer.ntlm.domain]]`link:#quarkus-mailer_quarkus.mailer.ntlm.domain[quarkus.mailer.ntlm.domain]`

[.description]
--
Sets the domain used on NTLM authentication.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MAILER_NTLM_DOMAIN+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MAILER_NTLM_DOMAIN+++`
endif::add-copy-button-to-env-var[]
--|string 
|

|===
ifndef::no-duration-note[]
[NOTE]
[id='duration-note-anchor-{summaryTableId}']
.About the Duration format
====
The format for durations uses the standard `java.time.Duration` format.
You can learn more about it in the link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html#parse-java.lang.CharSequence-[Duration#parse() javadoc].

You can also provide duration values starting with a number.
In this case, if the value consists only of a number, the converter treats the value as seconds.
Otherwise, `PT` is implicitly prepended to the value to obtain a standard `java.time.Duration` format.
====
endif::no-duration-note[]
